feat(Server): 添加更多Android支持
重写其他数据库初始化方法
添加更多Android支持
移除冗余代码